[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/interface/sound/volume-trans.png" type="Texture" id=1]
[ext_resource path="res://images/interface/sound/no-sound.png" type="Texture" id=2]
[ext_resource path="res://images/interface/white-circle.png" type="Texture" id=3]
[ext_resource path="res://scripts/audio-icon.gd" type="Script" id=4]
[ext_resource path="res://images/interface/sound/no-music.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="audio-icon" type="Node2D"]
script = ExtResource( 4 )

[node name="white_circle" type="Sprite" parent="."]
visible = false
position = Vector2( 67.2861, 539.524 )
scale = Vector2( 0.189044, 0.189044 )
texture = ExtResource( 3 )

[node name="no_sound" type="Sprite" parent="."]
position = Vector2( 32.7883, 570.673 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 2 )

[node name="has_sound" type="Sprite" parent="."]
position = Vector2( 32.8942, 570.779 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )

[node name="no_music" type="Sprite" parent="."]
position = Vector2( 31.3081, 569.394 )
scale = Vector2( 0.101245, 0.100886 )
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
margin_left = 5.25873
margin_top = 549.858
margin_right = 17.2588
margin_bottom = 569.858
rect_scale = Vector2( 4.09251, 1.89773 )
custom_styles/focus = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
